# tpm-tools

./: .gitignore  Makefile.am  README  bootstrap.sh  cleanup.sh  configure.in
include/: Makefile.am  tpm_pkcs11.h  tpm_seal.h  tpm_tspi.h  tpm_unseal.h  tpm_utils.h
lib/: Makefile.am  libtpm_pkcs11.la  tpm_log.c  tpm_pkcs11.c  tpm_tspi.c  tpm_unseal.c  tpm_utils.c
man/: Makefile.am
man/man1/: Makefile.am  tpm_sealdata.1  tpmtoken_import.1  tpmtoken_init.1  tpmtoken_objects.1  tpmtoken_protect.1  tpmtoken_setpasswd.1
man/man3/: tpmUnsealFile.3
man/man8/: Makefile.am  tpm_changeownerauth.8  tpm_clear.8  tpm_createek.8  tpm_getpubek.8  tpm_restrictpubek.8  tpm_setactive.8  tpm_setclearable.8  tpm_setenable.8  tpm_setownable.8  tpm_setpresence.8  tpm_takeownership.8
po_/: LINGUAS  Makevars  POTFILES.in
src/: Makefile.am
src/cmds/: Makefile.am  seal_ssl_key.c  tpm_sealdata.c  tpm_unsealdata.c
src/data_mgmt/: Makefile.am  data_import.c  data_init.c  data_object.c  data_object.h  data_passwd.c  data_protect.c
src/tpm_mgmt/: Makefile.am  tpm_activate.c  tpm_changeauth.c  tpm_clear.c  tpm_clearable.c  tpm_createek.c  tpm_enable.c  tpm_getpubek.c  tpm_nvdefine.c  tpm_ownable.c  tpm_present.c  tpm_reset.c  tpm_resetdalock.c  tpm_restrictpubek.c  tpm_restrictsrk.c  tpm_revokeek.c  tpm_selftest.c  tpm_setoperatorauth.c  tpm_startup.c  tpm_takeownership.c  tpm_version.c
